--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -1,20 +1,43 @@
+alembic==1.5.7
 attrs==20.3.0
+autopep8==1.5.6
 certifi==2020.12.5
 click==7.1.2
 coverage==5.5
 Flask==1.1.2
+Flask-Migrate==2.7.0
 Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+fuzzywuzzy==0.18.0
+gunicorn @ file:///opt/concourse/worker/volumes/live/4799f855-73bc-4b8b-4791-21e54d308628/volume/gunicorn_1615982910927/work
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
+joblib==1.0.1
+Mako==1.1.4
 MarkupSafe==1.1.1
+numpy==1.20.1
 packaging==20.9
+pandas==1.2.3
 pluggy==0.13.1
 psycopg2==2.8.6
+psycopg2-binary==2.8.6
 py==1.10.0
+pycodestyle==2.7.0
 pyparsing==2.4.7
 pytest==6.2.2
+python-dateutil==2.8.1
 python-dotenv==0.15.0
+python-editor==1.0.4
+python-Levenshtein==0.12.2
+pytz==2021.1
+rope==0.18.0
+scikit-learn==0.24.1
+scipy==1.6.1
+six==1.15.0
+sklearn==0.0
 SQLAlchemy==1.3.23
+threadpoolctl==2.1.0
 toml==0.10.2
 Werkzeug==1.0.1
+WTForms==2.3.3
